# MultiComponentTestPackage

./: CMakeLists.txt  LICENSE  README.md
AComponent/: CMakeLists.txt  function.cpp  function.h
BComponent/: CMakeLists.txt  function.cpp  function.h
